--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,9 +9,12 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
+    circlize,
     data.table,
+    forcats,
     ggplot2,
     ggrastr,
     ggsci,
-    methods,
+    patchwork,
+    purrr,
     RColorBrewer
