add homolog gene transfer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,10 @@ export("%ni%")
 export(calcPercentageGeneSets)
 export(excluFindVariableFeatures)
 export(getMatColor)
+export(hs2mmGene)
+export(hs2mmMat)
+export(mm2hsGene)
+export(mm2hsMat)
 export(plotFeature)
 export(plotMeta)
 export(renameAddModuleScore)
@@ -15,6 +19,7 @@ import(data.table)
 import(ggplot2)
 import(ggrastr)
 import(ggsci)
+import(magrittr)
 import(patchwork)
 importFrom(Seurat,AddModuleScore)
 importFrom(Seurat,FindVariableFeatures)
@@ -23,5 +28,7 @@ importFrom(circlize,colorRamp2)
 importFrom(forcats,fct_reorder)
 importFrom(ggsci,pal_material)
 importFrom(grDevices,colorRampPalette)
+importFrom(homologene,human2mouse)
+importFrom(homologene,mouse2human)
 importFrom(purrr,set_names)
 importFrom(stats,median)
