NO generic function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%ni%")
 export(calcPercentageGeneSets)
 export(excluFindVariableFeatures)
+export(getFeature)
 export(getMatColor)
 export(hs2mmGene)
 export(hs2mmMat)
@@ -12,8 +13,6 @@ export(plotFeature)
 export(plotMeta)
 export(renameAddModuleScore)
 export(uniqueID)
-exportMethods(plotFeature)
-exportMethods(plotMeta)
 import(RColorBrewer)
 import(data.table)
 import(ggplot2)
@@ -21,6 +20,7 @@ import(ggrastr)
 import(ggsci)
 import(magrittr)
 import(patchwork)
+import(purrr)
 importFrom(Seurat,AddModuleScore)
 importFrom(Seurat,FindVariableFeatures)
 importFrom(Seurat,PercentageFeatureSet)
